--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-  "name": "TɪᴋTᴏᴋ ᴅᴏᴡɴʟᴏᴀᴅᴇʀ",
+  "name": "TɪᴋTᴏᴋ",
   "description": "Telegram Bot to Download Tiktok video/audio.",
   "logo": "https://telegra.ph/file/76ac770b698d2336ad134.png",
   "keywords": [
