--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-API_HASH=your_api_hash
-APP_ID=your_app_id
-BOT_TOKEN=your_bot_token
+API_HASH=a46aaab0cf1854c634dde4566c827b71
+APP_ID=22971197
+BOT_TOKEN=8169213464:AAFDjofsSqEF7KBoB_J__UX_cASEsXqta3c
