--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 API_HASH=a46aaab0cf1854c634dde4566c827b71
-APP_ID=22971197
+API_ID=22971197
 BOT_TOKEN=8000339832:AAF_e9ycYPZ_vQM5ioCokvjX_iunouNjuJA
 DOWNLOADS_DIR=downloads/
